# BayesianTorchModels

./: README.md  pyproject.toml
src/BayesianTorchModels/: __init__.py  layers.py  module.py  parameter.py  utils.py
tests/: test_bayesian_ode_example.py  test_bayesian_torch_models.py  test_bayesian_vi.py
